<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:background="@color/colorLightGray"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="10dp"
        android:layout_margin="7dp"
        android:layout_gravity="center"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ViewFlipper
                android:id="@+id/id_viewFlipper"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/id_btn_natural_disaster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/shapebutton"
                        android:gravity="center" >

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/natural_disaster"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/btn_natural"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorLightGray"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/btn_natural_urdu"
                            android:padding="5dp"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/id_btn_weather_alert"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/shapebutton"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:padding="10dp"
                            android:src="@drawable/weather_alert" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/btn_weather_alert"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorLightGray"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/btn_weather_alert_urdu"
                            android:padding="5dp"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/id_btn_warnings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/shapebutton"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@mipmap/ic_alert"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/btn_warnings"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorLightGray"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/btn_warnings_urdu"
                            android:padding="5dp"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/id_btn_incidents"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/shapebutton"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/incident"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/btn_incident"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorLightGray"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/btn_incident_urdu"
                            android:padding="5dp"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/id_btn_event_map"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/shapebutton"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/event_location"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/btn_event_map"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorLightGray"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/btn_event_map_urdu"
                            android:padding="5dp"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/id_btn_call"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/shapebutton"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:src="@drawable/ic_call"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/btn_call"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorLightGray"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/btn_call_urdu"
                            android:padding="5dp"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>